--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="Inmobiliaria,Argentina,Brazil,España,compra"
+      content="Inmobiliaria,Argentina,Brazil,España,consultora,negocios,inversiones"
     />
     <meta name="author" content="Gallardo Gonzalo" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Inmobiliaria Villegas</title>
+    <title>Carlos F.Villegas</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
